--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.23.2
-onnxruntime==1.13.1
-opencv_python==4.7.0.68
-Pillow==9.4.0
-PyYAML==6.0
-requests==2.28.2
-streamlit==1.17.0
+numpy
+onnxruntime
+opencv_python
+Pillow
+PyYAML
+requests
+streamlit
